[package]
name = "rt"
version = "0.1.0"
authors = ["Kevin Nause <kevin@nause.engineering>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE.txt"
build = "build.rs"

[workspace]
members = [
    "boot",
    "entry"
]

[lib]
name = "rt"

[features]
default = ["halt"]
abort = ["panic-abort"]
halt = ["panic-halt"]

[dependencies]
entry = { path = "entry" }
panic-abort = { version = "0.3", optional = true } # Requires nightly
panic-halt = { version = "0.2", optional = true }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.*"

[target.'cfg(all(any(target_arch = "riscv32", target_arch = "riscv64"), target_os = "none"))'.dependencies]
riscv = "0.8"
riscv-rt = "0.8"

[target.'cfg(all(any(target_arch = "x86", target_arch = "x86_64"), target_os = "none"))'.dependencies]
bootloader = "0.10"